# goals-mirror

./: .gitignore  Goalfile.in  Makefile.am  Makefile.in  README  TODO  autogen.sh  configure.ac  goals.spec.in  run.in
docs/: Goalfile.pod  goals-reference.pod  goals.pod
parsing/: Makefile.in  ast.mli  lexer.mli  lexer.mll  main.ml  parser.mly
src/: Goalfile.in  Makefile.in  ast.ml  ast.mli  cmdline.ml  cmdline.mli  config.ml.in  config.mli  deps.ml  deps.mli  eval.ml  eval.mli  jobs.ml  jobs.mli  lexer.mll  main.ml  parse.ml  parse.mli  parser.mly  run.ml  run.mli  utils-c.c  utils.ml  utils.mli
stdlib/: fedora.gl  ocaml.gl  prelude.gl  prelude.sh  url.gl
tests/: 00-all-fail.gl  00-all-fail.sh  00-basic-deps.gl  00-basic-deps.sh  00-basic-predicate.gl  00-basic-predicate.sh  00-empty-code.gl  00-empty-code.sh  00-empty-goalfile.gl  00-empty-goalfile.sh  00-insert-var.gl  00-insert-var.sh  00-order-linear.gl  00-order-linear.sh  00-override-goal.gl  00-override-goal.sh  00-override-var.gl  00-override-var.sh  00-variable-not-found.gl  00-variable-not-found.sh  10-function-basename.gl  10-function-basename.sh  10-function-dirname.gl  10-function-dirname.sh  10-function-error.gl  10-function-error.sh  10-function-extension.gl  10-function-extension.sh  10-function-filter-out.expected  10-function-filter-out.gl  10-function-filter-out.sh  10-function-filter.expected  10-function-filter.gl  10-function-filter.sh  10-function-head.gl  10-function-head.sh  10-function-join.expected  10-function-join.gl  10-function-join.sh  10-function-last.gl  (+30 more)
